--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^6.6.1",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
